--- a/src/components/FocusFlow.css
+++ b/src/components/FocusFlow.css
@@ -1,6 +1,5 @@
 /* Import the google web fonts you want to use */
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Roboto&display=swap');
-
 /*Typography
 --------------------------------------------------------------*/
 body,
@@ -27,11 +26,3 @@ h1, h2, h3, h4, h5, h6 {
 p {
   margin-bottom: 1.5em;
 }
-
-/*.title_main {
-  margin-block-end: 0;
-  font-family: "Oswald", sans-serif;
-  font-size: 10rem;
-  color:#ffff
-  
-}*/
