--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,10 +5,10 @@
 .camera-image {
     display: flex;
     flex-wrap: wrap;
-    width: 45rem;
-    height: 50rem;
+    width: 51rem;
+    height: 51rem;
     opacity: 45%;
-    margin-left: 6rem;
+    margin-left: 2rem;
 } 
 
 body {
@@ -21,9 +21,9 @@ body {
 .row {
     position: absolute;
     flex-wrap: wrap;
-    margin-left: 7rem;
+    margin-left: 6rem;
     padding: 0;
-    top: 50%;
+    top: 40%;
     transform: translateY(-20%);
     width: 100%;
     color: #ffff;
